--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "api/webhook.js",
   "scripts": {
-    "start": "micro -l tcp://0.0.0.0:4444",
+    "start": "pm2 start.js --name chat-receiver -i -1",
+    "dev": "micro -l tcp://0.0.0.0:4444",
     "deploy": "npx vercel --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +15,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "micro": "^9.3.4"
+    "micro": "^9.3.4",
+    "pm2": "^4.5.5"
   }
 }
