--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "api/webhook.js",
   "scripts": {
-    "start": "pm2 start.js --name chat-receiver -i -1",
+    "start": "pm2 start start.js --name chat-receiver -i -1",
     "dev": "micro -l tcp://0.0.0.0:4444",
     "deploy": "npx vercel --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
